--- a/index.html
+++ b/index.html
@@ -1120,6 +1120,7 @@
     <nav class="header-center">
       <a href="#products">Products</a>
       <a href="thcaproducts.html">THCA</a>
+      <a href="reviews.html">Reviews</a>
     </nav>
     <div class="header-right">
       <p><strong>Location:</strong> 2028 Tiffin Ave, Findlay, OH 45840</p>
@@ -1131,6 +1132,7 @@
     <nav class="mobile-nav" id="mobileNav">
       <a href="#products">Products</a>
       <a href="thcaproducts.html">THCA Products</a>
+      <a href="reviews.html">Reviews</a>
       <div style="margin-top: 20px; padding-top: 20px; border-top: 1px solid rgba(255,255,255,0.2);">
         <p style="color: #ddd; font-size: 0.9rem; margin-bottom: 8px;"><strong>Location:</strong> 2028 Tiffin Ave, Findlay, OH 45840</p>
         <p style="color: #ddd; font-size: 0.9rem;"><strong>Hours:</strong> 8:00 AM - 12:00 AM | Every Day</p>
