--- a/thcaproducts.html
+++ b/thcaproducts.html
@@ -542,6 +542,7 @@
       <a href="index.html">Home</a>
       <a href="products.html">Products</a>
       <a href="#" style="background: rgba(255, 107, 53, 0.2); color: #ff6b35;">THCA</a>
+      <a href="reviews.html">Reviews</a>
     </nav>
     <div class="header-right">
       <p><strong>Location:</strong> 2028 Tiffin Ave, Findlay, OH 45840</p>
@@ -554,6 +555,7 @@
       <a href="index.html">Home</a>
       <a href="products.html">Products</a>
       <a href="#" style="color: #ff6b35;">THCA</a>
+      <a href="reviews.html">Reviews</a>
       <div style="margin-top: 20px; padding-top: 20px; border-top: 1px solid rgba(255,255,255,0.2);">
         <p style="color: #ddd; font-size: 0.9rem; margin-bottom: 8px;"><strong>Location:</strong> 2028 Tiffin Ave, Findlay, OH 45840</p>
         <p style="color: #ddd; font-size: 0.9rem;"><strong>Hours:</strong> 8:00 AM - 12:00 AM | Every Day</p>
